WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53014
ES5 strict mode keyword restrictions aren't implemented
https://bugs.webkit.org/show_bug.cgi?id=53014
Summary
ES5 strict mode keyword restrictions aren't implemented
Jeff Walden (remove +bwo to email)
Reported
2011-01-24 08:26:48 PST
See §7.6.1.2.
Attachments
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2011-06-16 20:17:51 PDT
Fixed in
r89109
Gavin Barraclough
Comment 2
2011-06-17 00:46:31 PDT
***
Bug 55342
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug